created hero header

--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
         </li>
       </ul>
     </nav>
+    <div class="hero-image">
+      <img
+        src="images/beautiful-wide-shot-full-moon-night-sky.jpg"
+        alt="picture of the Moon"
+      />
+      <div class="hero-text">
+        <h1>Cultural Deities of the Moon</h1>
+        <h2>Similarities & Differences</h2>
+      </div>
+    </div>
   </body>
 </html>
