added first deity

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="images/moon favicon.png" />
   </head>
   <body>
     <nav>
@@ -32,6 +33,41 @@
         <h1>Cultural Deities of the Moon</h1>
         <h2>Similarities & Differences</h2>
       </div>
+    </div>
+
+    <div class="intro">
+      <p>
+        Across cultures and time periods, moon deities have held a prominent
+        place in mythology, often representing cycles of time, feminine energy,
+        and the mysteries of the night sky. Revered for their connection to the
+        natural world, these lunar gods and goddesses embody themes of
+        transformation, intuition, and fertility. From the goddess Haliya in
+        Filipino mythology to the powerful god Chandra in Hinduism, the moon has
+        been a source of awe and reverence, influencing rituals, calendars, and
+        cultural beliefs. These dieties not only illuminate the night but also
+        reflect humanity's enduring fascination with the celestial and the
+        divine.
+      </p>
+    </div>
+
+    <div class="haliya">
+      <h3>Haliya: Filipino goddess of the Moon</h3>
+      <section id="flexbox">
+        <p>
+          Haliya is a moon goddess in Filipino mythology, particularly within
+          the Bicolano culture. She is often depicted as a beautiful and radiant
+          deity who embodies the moons calm and nurturing qualities. Haliya is
+          also associated with the night sky, and in some stories, she is said
+          to be the sister of the sun god Bathala. In one myth, Haliya is said
+          to have been shunned by her brother and hides herself in the moon to
+          escape his harsh light. Her stories often reflect themes of beauty,
+          isolation, and the cyclical nature of the moon. Haliya's role as a
+          protector of the night sky underscores the Filipino belief in the
+          power and majesty of celestial forces.
+        </p>
+
+        <img src="images/haliyagoddess.jpg" alt="Haliya" />
+      </section>
     </div>
   </body>
 </html>
