added dropdown bar

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <nav>
       <ul>
         <li>
-          <a href="index.html">Home</a>
+          <a class="active" href="index.html">Home</a>
         </li>
         <li>
           <a href="lore.html">Lore</a>
+          <ul class="dropdown">
+            <li><a href="lore.html">Kaliya</a></li>
+            <li><a href="lore.html">Chandra</a></li>
+            <li><a href="lore.html">Kuutar</a></li>
+            <li><a href="lore.html">Khonshu</a></li>
+          </ul>
         </li>
         <li>
           <a href="comparison.html">Comparing & Contrasting</a>
@@ -31,7 +37,7 @@
       />
       <div class="hero-text">
         <h1>Cultural Deities of the Moon</h1>
-        <h2>Similarities & Differences</h2>
+        <h2>Introductions</h2>
       </div>
     </div>
 
@@ -67,6 +73,42 @@
         </p>
 
         <img src="images/haliyagoddess.jpg" alt="Haliya" />
+      </section>
+    </div>
+
+    <div class="chandra">
+      <h3>Chandra: Hindu god of the Moon</h3>
+      <section id="flexbox2">
+        <p>
+          Chandra is the Hindu god of the moon, often depicted as a beautiful,
+          fair, and wise deity who rides a chariot pulled by white horses. He is
+          associated with the mind, emotions, and fertility, and plays an
+          important role in both mythology and astrology. Chandra is also one of
+          the Navagrahas (nine planetary deities) and is linked to the lunar
+          calendar in Hindu tradition. He is said to be the father of Budha (the
+          planet Mercury) and is married to the 27 Nakshatras (lunar mansions),
+          who are daughters of the sage Daksha.
+        </p>
+
+        <img src="images/chandragoddess.jpg" alt="Chandra" />
+      </section>
+    </div>
+
+    <div class="kuutar">
+      <h3>Kuutar: Finnish goddess of the Moon</h3>
+      <section id="flexbox3">
+        <p>
+          Kuutar is the Finnish goddess of the moon in Finnish mythology and
+          folklore. She is known for her beauty and grace, and she weaves golden
+          threads and clothes from moonlight. Kuutar is associated with
+          femininity, wealth, and the mystical qualities of the moon. In the
+          Kalevala, Finland's national epic, maidens pray to her for beauty and
+          fine garments. She represents the nurturing and magical aspects of the
+          moon. This image depicts her with sun goddess Paivatar and star
+          goddess Tahdetar.
+        </p>
+
+        <img src="images/kuutar.png" alt="Kuutar" />
       </section>
     </div>
   </body>
