--- a/index.html
+++ b/index.html
@@ -111,5 +111,23 @@
         <img src="images/kuutar.png" alt="Kuutar" />
       </section>
     </div>
+
+    <div class="khonshu">
+      <h3>Khonshu: Egyptian god of the Moon</h3>
+      <section id="flexbox4">
+        <p>
+          Khonshu is the ancient Egyptian god of the moon, time, and healing.
+          Often depicted as a young man with a sidelock of youth and a moon disk
+          above his head, he was believed to control the night and mark the
+          passage of time. Khonshu was also associated with protection and had
+          healing powers. He was worshipped as the son of Amun and Mut in the
+          Theban triad and played an important role in lunar and
+          calendar-related rituals. His name means “traveler,” reflecting the
+          moon's journey across the sky.
+        </p>
+
+        <img src="images/Khonsu.jpg" alt="Khonshu" />
+      </section>
+    </div>
   </body>
 </html>
