fixed lore page

--- a/lore.html
+++ b/lore.html
@@ -16,10 +16,10 @@
         <li>
           <a class="active" href="lore.html">Lore</a>
           <ul class="dropdown">
-            <li><a href="#">Kaliya</a></li>
-            <li><a href="#">Chandra</a></li>
-            <li><a href="#">Kuutar</a></li>
-            <li><a href="#">Khonshu</a></li>
+            <li><a href="lore.html">Kaliya</a></li>
+            <li><a href="lore.html">Chandra</a></li>
+            <li><a href="lore.html">Kuutar</a></li>
+            <li><a href="lore.html">Khonshu</a></li>
           </ul>
         </li>
         <li>
