fixed hero images and started chandra page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="index.html">Home</a>
         </li>
         <li>
-          <a href="lore.html">Lore</a>
+          <a href="chandra.html">Chandra</a>
         </li>
         <li>
           <a href="comparison.html">Comparing & Contrasting</a>
@@ -24,17 +24,14 @@
         </li>
       </ul>
     </nav>
-    <div class="hero-image">
-      <img
-        src="images/beautiful-wide-shot-full-moon-night-sky.jpg"
-        alt="picture of the Moon"
-      />
-      <div class="hero-text">
-        <h1>Cultural Deities of the Moon</h1>
-        <h2>Similarities & Differences</h2>
+    <header class="headerHome">
+      <div class="hero">
+        <div class="hero-text">
+          <h1>Cultural Deities of the Moon</h1>
+          <h2>Similarities & Differences</h2>
+        </div>
       </div>
-    </div>
-
+    </header>
     <div class="intro">
       <p>
         Across cultures and time periods, moon deities have held a prominent
