fixed chandra page, added link to nav

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
           <a class="active" href="index.html">Home</a>
         </li>
         <li>
+          <a href="lore.html">Lore</a>
           <ul class="dropdown">
             <li><a href="lore.html">Kaliya</a></li>
-            <li><a href="lore.html">Chandra</a></li>
+            <li><a href="chandra.html">Chandra</a></li>
             <li><a href="lore.html">Kuutar</a></li>
             <li><a href="lore.html">Khonshu</a></li>
           </ul>
