--- a/lore.html
+++ b/lore.html
@@ -17,7 +17,7 @@
           <a class="active" href="lore.html">Lore</a>
           <ul class="dropdown">
             <li><a href="lore.html">Kaliya</a></li>
-            <li><a href="lore.html">Chandra</a></li>
+            <li><a href="chandra.html">Chandra</a></li>
             <li><a href="lore.html">Kuutar</a></li>
             <li><a href="lore.html">Khonshu</a></li>
           </ul>
@@ -30,15 +30,13 @@
         </li>
       </ul>
     </nav>
-    <div class="hero-image">
-      <img
-        src="images/beautiful-wide-shot-full-moon-night-sky.jpg"
-        alt="picture of the Moon"
-      />
-      <div class="hero-text">
-        <h1>Cultural Deities of the Moon</h1>
-        <h2>Lore & Stories</h2>
+    <header class="headerHome">
+      <div class="hero">
+        <div class="hero-text">
+          <h1>Cultural Deities of the Moon</h1>
+          <h2>Lore & Storie</h2>
+        </div>
       </div>
-    </div>
+    </header>
   </body>
 </html>
