--- a/chandra.html
+++ b/chandra.html
@@ -11,10 +11,16 @@
     <nav>
       <ul>
         <li>
-          <a href="index.html">Home</a>
+          <a class="active" href="index.html">Home</a>
         </li>
         <li>
-          <a href="chandra.html">Chandra</a>
+          <a href="lore.html">Lore</a>
+          <ul class="dropdown">
+            <li><a href="lore.html">Kaliya</a></li>
+            <li><a class="active" href="chandra.html">Chandra</a></li>
+            <li><a href="lore.html">Kuutar</a></li>
+            <li><a href="lore.html">Khonshu</a></li>
+          </ul>
         </li>
         <li>
           <a href="comparison.html">Comparing & Contrasting</a>
@@ -33,7 +39,7 @@
       </div>
     </header>
     <section class="content-chandra">
-      <section class="intro-chandra">
+      <section class="intro">
         <p>
           Chandra, also known as Soma, is the celestial deity representing the
           Moon in Hindu mythology. Revered across Indian religious traditions
@@ -44,7 +50,7 @@
         </p>
       </section>
       <section>
-        <h2>Mythology and Origin Story</h2>
+        <h3>Mythology and Origin Story</h3>
         <p>
           Chandra’s origins trace back to Vedic literature, where he is praised
           in the Rig Veda as the essence of Soma, the sacred nectar of the gods,
@@ -54,16 +60,16 @@
         </p>
       </section>
       <section>
-        <h2>Iconography and Symbols</h2>
+        <h3>Iconography and Symbols</h3>
       </section>
       <section>
-        <h2>Worship and Rituals</h2>
+        <h3>Worship and Rituals</h3>
       </section>
       <section>
-        <h2>Temples</h2>
+        <h3>Temples</h3>
       </section>
       <section>
-        <h2>Legends</h2>
+        <h3>Legends</h3>
       </section>
     </section>
   </body>
