Fixed header poll page

--- a/poll.html
+++ b/poll.html
@@ -30,17 +30,14 @@
         </li>
       </ul>
     </nav>
-    <div class="hero-image">
-      <img
-        src="images/beautiful-wide-shot-full-moon-night-sky.jpg"
-        alt="picture of the Moon"
-      />
-      <div class="hero-text">
-        <h1>Cultural Deities of the Moon</h1>
-        <h2>Who is Your Favorite?</h2>
+    <header class="headerHome">
+      <div class="hero">
+        <div class="hero-text">
+          <h1>Cultural Deities of the Moon</h1>
+          <h2>Who is Your Favorite?</h2>
+        </div>
       </div>
-    </div>
-
+    </header>
     <div class="poll">
       <div class="question"></div>
       <div class="answers"></div>
