change link image

--- a/chandra.html
+++ b/chandra.html
@@ -97,7 +97,7 @@
             </div>
           </div>
           <div class="image-chandra">
-            <img src="/images/chandra-the-moon.jpg" alt="chandra" />
+            <img src="images/chandra-the-moon.jpg" alt="chandra" />
           </div>
         </div>
       </section>
