--- a/chandra.html
+++ b/chandra.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li>
-          <a class="active" href="index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <a href="lore.html">Lore</a>
