--- a/lore.html
+++ b/lore.html
@@ -34,7 +34,7 @@
       <div class="hero">
         <div class="hero-text">
           <h1>Cultural Deities of the Moon</h1>
-          <h2>Lore & Storie</h2>
+          <h2>Lore & Stories</h2>
         </div>
       </div>
     </header>
