updated active pages, started kuutar page

--- a/poll.html
+++ b/poll.html
@@ -11,22 +11,22 @@
     <nav>
       <ul>
         <li>
-          <a class="active" href="index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <a href="lore.html">Lore</a>
           <ul class="dropdown">
             <li><a href="lore.html">Kaliya</a></li>
-            <li><a href="lore.html">Chandra</a></li>
-            <li><a href="lore.html">Kuutar</a></li>
-            <li><a href="lore.html">Khonshu</a></li>
+            <li><a href="chandra.html">Chandra</a></li>
+            <li><a href="kuutar.html">Kuutar</a></li>
+            <li><a href="khonshu.html">Khonshu</a></li>
           </ul>
         </li>
         <li>
           <a href="comparison.html">Comparing & Contrasting</a>
         </li>
         <li>
-          <a href="poll.html">Who's Your Favorite?</a>
+          <a class="active" href="poll.html">Who's Your Favorite?</a>
         </li>
       </ul>
     </nav>
