--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <ul class="dropdown">
             <li><a href="lore.html">Kaliya</a></li>
             <li><a href="chandra.html">Chandra</a></li>
-            <li><a href="lore.html">Kuutar</a></li>
+            <li><a href="kuutar.html">Kuutar</a></li>
             <li><a href="lore.html">Khonshu</a></li>
           </ul>
         </li>
