--- a/khonshu.html
+++ b/khonshu.html
@@ -11,15 +11,15 @@
     <nav>
       <ul>
         <li>
-          <a class="active" href="index.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <a href="lore.html">Lore</a>
           <ul class="dropdown">
             <li><a href="lore.html">Kaliya</a></li>
-            <li><a class="active" href="chandra.html">Chandra</a></li>
-            <li><a href="lore.html">Kuutar</a></li>
-            <li><a href="lore.html">Khonshu</a></li>
+            <li><a href="chandra.html">Chandra</a></li>
+            <li><a href="kuutar.html">Kuutar</a></li>
+            <li><a class="active" href="khonshu.html">Khonshu</a></li>
           </ul>
         </li>
         <li>
