--- a/kuutar.html
+++ b/kuutar.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chandra</title>
+    <title>Kuutar</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" type="image/x-icon" href="images/moon favicon.png" />
   </head>
@@ -17,8 +17,8 @@
           <a href="lore.html">Lore</a>
           <ul class="dropdown">
             <li><a href="lore.html">Kaliya</a></li>
-            <li><a class="active" href="chandra.html">Chandra</a></li>
-            <li><a href="kuutar.html">Kuutar</a></li>
+            <li><a href="chandra.html">Chandra</a></li>
+            <li><a class="active" href="kuutar.html">Kuutar</a></li>
             <li><a href="lore.html">Khonshu</a></li>
           </ul>
         </li>
@@ -30,11 +30,11 @@
         </li>
       </ul>
     </nav>
-    <header class="headerChandra">
+    <header class="headerKuutar">
       <div class="hero">
         <div class="hero-text">
-          <h1>Chandra</h1>
-          <h2>Hindu god of the Moon</h2>
+          <h1>Kuutar</h1>
+          <h2>Finnish goddess of the Moon</h2>
         </div>
       </div>
     </header>
@@ -97,7 +97,7 @@
             </div>
           </div>
           <div class="image-chandra">
-            <img src="images/chandra-the-moon.jpg" alt="chandra" />
+            <img src="" alt="" />
           </div>
         </div>
       </section>
@@ -114,5 +114,6 @@
         <h3>Legends</h3>
       </section>
     </section>
+  </body>
   </body>
 </html>
