--- a/lore.html
+++ b/lore.html
@@ -18,8 +18,8 @@
           <ul class="dropdown">
             <li><a href="lore.html">Kaliya</a></li>
             <li><a href="chandra.html">Chandra</a></li>
-            <li><a href="lore.html">Kuutar</a></li>
-            <li><a href="lore.html">Khonshu</a></li>
+            <li><a href="kuutar.html">Kuutar</a></li>
+            <li><a href="khonshu.html">Khonshu</a></li>
           </ul>
         </li>
         <li>
