--- a/haliya.html
+++ b/haliya.html
@@ -5,8 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haliya</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="images/moon favicon.png" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>
+          <a class="active" href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="lore.html">Lore</a>
+          <ul class="dropdown">
+            <li><a href="lore.html">Haliya</a></li>
+            <li><a href="chandra.html">Chandra</a></li>
+            <li><a href="kuutar.html">Kuutar</a></li>
+            <li><a href="lore.html">Khonshu</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="comparison.html">Comparing & Contrasting</a>
+        </li>
+        <li>
+          <a href="poll.html">Who's Your Favorite?</a>
+        </li>
+      </ul>
+    </nav>
     <h1>Haliya</h1>
     <h2>Filipino Masked Moon Goddess</h2>
 
