edited Haliya pages styling

--- a/haliya.html
+++ b/haliya.html
@@ -16,7 +16,7 @@
         <li>
           <a href="lore.html">Lore</a>
           <ul class="dropdown">
-            <li><a href="lore.html">Haliya</a></li>
+            <li><a href="haliya.html">Haliya</a></li>
             <li><a href="chandra.html">Chandra</a></li>
             <li><a href="kuutar.html">Kuutar</a></li>
             <li><a href="lore.html">Khonshu</a></li>
@@ -30,49 +30,51 @@
         </li>
       </ul>
     </nav>
-    <h1>Haliya</h1>
-    <h2>Filipino Masked Moon Goddess</h2>
 
-    <img
-      src="https://64.media.tumblr.com/16b54624db95627995f262dc4b506789/tumblr_pe8pcdazXH1r84yq2o1_640.jpg"
-      alt="Bicolano Masked Moon Goddess Haliya"
-    />
-    <figcaption>Haliya, by Caleb @porkironandwine via Twitter</figcaption>
+    <div class="haliya-page">
+      <section class="">
+        <h3>Haliya</h3>
+        <h1>Filipino Masked Moon Goddess</h1>
+        <img
+          src="https://64.media.tumblr.com/16b54624db95627995f262dc4b506789/tumblr_pe8pcdazXH1r84yq2o1_640.jpg"
+          alt="Bicolano Masked Moon Goddess Haliya"
+        />
+        <figcaption>Haliya, by Caleb @porkironandwine via Twitter</figcaption>
+      </section>
 
-    <p>
-      The story of a masked, moon-protecting, warrior goddess from the Bicol
-      region doesn't come from authentic pre-colonial lore. It traces back to
-      the early 1990s, when a passage describing a ritual dance called Haleya
-      was misread as referring to a deity. That mistake snowballed: a blog in
-      the early 2000s repeated the claim, mixing it with shaky sources, and the
-      invented 'myth' spread from there. Sadly, much of our pre-Spanish history
-      was suppressed as 'heretical' and destroyed, so genuine records are
-      scarce. Our writing systems were nearly lost, but recent efforts have
-      begun to recover and reintegrate them into Filipino culture.
-    </p>
+      <p>
+        The story of a masked, moon-protecting, warrior goddess from the Bicol
+        region doesn't come from authentic pre-colonial lore. It traces back to
+        the early 1990s, when a passage describing a ritual dance called Haleya
+        was misread as referring to a deity. That mistake snowballed: a blog in
+        the early 2000s repeated the claim, mixing it with shaky sources, and
+        the invented 'myth' spread from there. Sadly, much of our pre-Spanish
+        history was suppressed as 'heretical' and destroyed, so genuine records
+        are scarce. Our writing systems were nearly lost, but recent efforts
+        have begun to recover and reintegrate them into Filipino culture.
+      </p>
 
-    <p>
-      Because of the misinterpretation as well as the nature of myths, there are
-      multiple versions and retellings of this story. The following story is my
-      personal favorite version of this modern myth.
-    </p>
+      <p>
+        Because of the misinterpretation as well as the nature of myths, there
+        are multiple versions and retellings of this story. The following story
+        is my personal favorite version of this modern myth.
+      </p>
 
-    <p>
-      Long ago seven radiant moons lit the night, each a living deity. From the
-      ocean depths, Bakunawa, once a sea maiden, grew jealous of their splendor
-      and especially of the handsome moon Bulan. Twisting herself into a vast
-      serpent-dragon, she flew into the sky and swallowed the moons one by one,
-      but each melted away inside her like wax. Furious, the high god Bathala
-      bound Bakunawa to her monstrous form and forbade her to devour the last
-      two moons. Undeterred, she attacked again, but this time Haliya was
-      prepared. Wearing a golden mask to hide her beauty, the moon goddess
-      faught Bakunawa, protecting her last sibling, until she drove the serpent
-      back into the abyss. Now, whenever Bakunawa resurfaces—marked by a lunar
-      eclipse and the moon's crimson hue—people on earth beat gongs, clash pots,
-      and play music to frighten or lull her until she spits the moon out,
-      preserving the sky's remaining light.
-    </p>
-
-    <div></div>
+      <p>
+        Long ago seven radiant moons lit the night, each a living deity. From
+        the ocean depths, Bakunawa, once a sea maiden, grew jealous of their
+        splendor and especially of the handsome moon Bulan. Twisting herself
+        into a vast serpent-dragon, she flew into the sky and swallowed the
+        moons one by one, but each melted away inside her like wax. Furious, the
+        high god Bathala bound Bakunawa to her monstrous form and forbade her to
+        devour the last two moons. Undeterred, she attacked again, but this time
+        Haliya was prepared. Wearing a golden mask to hide her beauty, the moon
+        goddess faught Bakunawa, protecting her last sibling, until she drove
+        the serpent back into the abyss. Now, whenever Bakunawa
+        resurfaces—marked by a lunar eclipse and the moon's crimson hue—people
+        on earth beat gongs, clash pots, and play music to frighten or lull her
+        until she spits the moon out, preserving the sky's remaining light.
+      </p>
+    </div>
   </body>
 </html>
