finish chandra's page content

--- a/chandra.html
+++ b/chandra.html
@@ -102,16 +102,165 @@
         </div>
       </section>
       <section>
-        <h3>Iconography and Symbols</h3>
+        <div class="text-img-chandra">
+          <div>
+            <h3>Iconography and Symbols</h3>
+            <p>
+              Chandra is portrayed as a fair, youthful deity with a serene
+              expression, riding a chariot drawn by ten white horses or geese.
+              Sometimes, he’s shown seated on a lotus atop his chariot.
+            </p>
+            <p>Common symbols include:</p>
+            <div class="list-origin-chandra">
+              <ul>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Crescent Moon:</span>Signifying
+                    the phases of the moon and the rhythm of time.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Lotus Flower:</span>
+                    Representing purity and divine beauty.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra"
+                      >White Chariot and Antelope:
+                    </span>
+                    Symbols of clarity, grace, and swift cosmic movement.
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <p>
+              In Buddhist art, particularly from the Newar tradition of Nepal,
+              Chandra is occasionally featured in mandalas, though more often as
+              a secondary figure rather than a central deity.
+            </p>
+          </div>
+        </div>
       </section>
       <section>
-        <h3>Worship and Rituals</h3>
+        <div class="text-img-chandra">
+          <div>
+            <h3>Worship and Rituals</h3>
+            <p>
+              Chandra holds spiritual importance in Vedic rituals, astrology,
+              and modern Hindu practices:
+            </p>
+            <div class="list-origin-chandra">
+              <ul>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Karva Chauth:</span> Married
+                    women fast and pray for their husbands' well-being, breaking
+                    the fast upon sighting the moon.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Somvar (Monday) Fasts:</span>
+                    Devotees fast on Mondays to seek Chandra’s blessings for
+                    emotional balance and mental clarity.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Chandra Graha Shanti Puja:</span>
+                    Conducted to appease Chandra during astrological imbalances
+                    that may affect emotional or mental well-being.
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <p>
+              He is also honored at temples like the Somnath Temple in Gujarat,
+              where Lord Shiva wears Chandra on his matted hair as a crescent,
+              symbolizing divine protection and renewal.
+            </p>
+          </div>
+        </div>
       </section>
       <section>
-        <h3>Temples</h3>
+        <div class="text-img-chandra">
+          <div class="text-chandra">
+            <h3>Temples</h3>
+            <p>
+              Though not as prominently worshipped as deities like Shiva or
+              Vishnu, Chandra has sacred associations:
+            </p>
+            <div class="list-origin-chandra">
+              <ul>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Somnath Temple (Gujarat): </span>
+                    According to legend, Chandra was saved from Daksha’s curse
+                    by Shiva here, earning the deity the name Chandrashekhara
+                    (He who wears the moon).
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra"
+                      >Chandrabhaga River (Himachal Pradesh):</span
+                    >
+                    Originating from the mythical site where Chandra was split
+                    by Brahma, the river symbolizes both spiritual cleansing and
+                    the harmony of masculine and feminine forces.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="image-chandra">
+            <img src="images/Somanath_mandir.jpg" alt="Somanath Temple" />
+          </div>
+        </div>
       </section>
       <section>
-        <h3>Legends</h3>
+        <div class="text-img-chandra">
+          <div>
+            <h3>Legends</h3>
+            <p>Chandra’s stories span epics, folklore, and astronomy:</p>
+            <div class="list-origin-chandra">
+              <ul>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Lunar Eclipses:</span> During
+                    Samudra Manthan, Chandra helped expose the demon Rahu’s
+                    deception. In revenge, Rahu attempts to devour Chandra,
+                    explaining lunar eclipses (Chandra Grahan).
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Ganesha's Curse: </span>
+                    Ganesha cursed Chandra for mocking him, leading to the
+                    moon's periodic dimming, this is a mythological explanation
+                    for the moon’s phases.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    <span class="bold-chandra">Symbol in Feminine Power:</span>
+                    Goddesses like Kali and Durga wear the crescent moon on
+                    their foreheads, symbolizing control over the mind and
+                    emotions.
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <p>
+              In Tibetan Buddhism, Chandra is found within mandalas as a
+              subsidiary figure or under the feet of deities like
+              Vajrabhairava—showing how his influence transcends religious
+              boundaries.
+            </p>
+          </div>
+        </div>
       </section>
     </section>
   </body>
