--- a/chandra.html
+++ b/chandra.html
@@ -263,5 +263,16 @@
         </div>
       </section>
     </section>
+    <div class="feedback-box">
+      <div class="feedback-question">
+        <p>Did you find this information helpful?</p>
+
+        <button onclick="handleFeedback(true)">Yes</button>
+        <button onclick="handleFeedback(false)">No</button>
+      </div>
+      <p id="response-message"></p>
+    </div>
+
+    <script src="js/feedback.js"></script>
   </body>
 </html>
