--- a/chandra.html
+++ b/chandra.html
@@ -266,11 +266,14 @@
     <div class="feedback-box">
       <div class="feedback-question">
         <p>Did you find this information helpful?</p>
-
-        <button onclick="handleFeedback(true)">Yes</button>
-        <button onclick="handleFeedback(false)">No</button>
+        <button class="btn" onclick="openPopup()">Yes</button>
+        <button class="btn" onclick="openPopup()">No</button>
       </div>
-      <p id="response-message"></p>
+    </div>
+    <div class="popup" id="popup">
+      <img src="images/checkmark.png" alt="checkmark" />
+      <h2>Thank You for Your Feedback!</h2>
+      <button type="button" onclick="closePopup()">OK</button>
     </div>
 
     <script src="js/feedback.js"></script>
