--- a/chandra.html
+++ b/chandra.html
@@ -16,8 +16,8 @@
         <li>
           <a href="lore.html">Lore</a>
           <ul class="dropdown">
-            <li><a href="lore.html">Kaliya</a></li>
-            <li><a class="active" href="chandra.html">Chandra</a></li>
+            <li><a href="haliya.html">Haliya</a></li>
+            <li><a href="chandra.html">Chandra</a></li>
             <li><a href="kuutar.html">Kuutar</a></li>
             <li><a href="lore.html">Khonshu</a></li>
           </ul>
