--- a/comparison.html
+++ b/comparison.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lore</title>
+    <title>Comparison</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" type="image/x-icon" href="images/moon favicon.png" />
   </head>
@@ -30,11 +30,11 @@
         </li>
       </ul>
     </nav>
-    <header class="headerHome">
+    <header class="header-comp">
       <div class="hero">
         <div class="hero-text">
           <h1>Cultural Deities of the Moon</h1>
-          <h2>Lore & Stories</h2>
+          <h2>Comparison</h2>
         </div>
       </div>
     </header>
