--- a/haliya.html
+++ b/haliya.html
@@ -7,8 +7,38 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>Haliya</h1>
-    <h2>Filipino Masked Moon Goddess</h2>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="lore.html">Lore</a>
+          <ul class="dropdown">
+            <li><a href="haliya.html">Haliya</a></li>
+            <li><a href="chandra.html">Chandra</a></li>
+            <li><a href="kuutar.html">Kuutar</a></li>
+            <li><a href="lore.html">Khonshu</a></li>
+          </ul>
+        </li>
+        <li>
+          <a href="comparison.html">Comparing & Contrasting</a>
+        </li>
+        <li>
+          <a href="poll.html">Who's Your Favorite?</a>
+        </li>
+      </ul>
+    </nav>
+
+    <!--  In styles sheet create a headerHaliya and put a picture you can copy one of the other header and change the name and the picture, so we all have the same formating-->
+    <header class="headerHaliya">
+      <div class="hero">
+        <div class="hero-text">
+          <h1>Haliya</h1>
+          <h2>Filipino Masked Moon Goddess</h2>
+        </div>
+      </div>
+    </header>
 
     <img
       src="https://64.media.tumblr.com/16b54624db95627995f262dc4b506789/tumblr_pe8pcdazXH1r84yq2o1_640.jpg"
