--- a/khonshu.html
+++ b/khonshu.html
@@ -16,11 +16,12 @@
         <li>
           <a href="lore.html">Lore</a>
           <ul class="dropdown">
-            <li><a href="lore.html">Kaliya</a></li>
+            <li><a href="haliya.html">Haliya</a></li>
             <li><a href="chandra.html">Chandra</a></li>
             <li><a href="kuutar.html">Kuutar</a></li>
-            <li><a class="active" href="khonshu.html">Khonshu</a></li>
+            <li><a href="lore.html">Khonshu</a></li>
           </ul>
+        </li>
         </li>
         <li>
           <a href="comparison.html">Comparing & Contrasting</a>
