--- a/chandra.html
+++ b/chandra.html
@@ -90,7 +90,7 @@
                     Chandra married 27 daughters of Daksha, representing the
                     lunar constellations (Nakshatras), but showed favoritism to
                     Rohini. Cursed by Daksha for his neglect of the other wives,
-                    Chandra began to wane—giving rise to the lunar phases.
+                    Chandra began to wane, giving rise to the lunar phases.
                   </p>
                 </li>
               </ul>
@@ -224,7 +224,7 @@
         <div class="text-img-chandra">
           <div>
             <h3>Legends</h3>
-            <p>Chandra’s stories span epics, folklore, and astronomy:</p>
+
             <div class="list-origin-chandra">
               <ul>
                 <li>
@@ -255,9 +255,8 @@
             </div>
             <p>
               In Tibetan Buddhism, Chandra is found within mandalas as a
-              subsidiary figure or under the feet of deities like
-              Vajrabhairava—showing how his influence transcends religious
-              boundaries.
+              subsidiary figure or under the feet of deities like Vajrabhairava,
+              showing how his influence transcends religious boundaries.
             </p>
           </div>
         </div>
@@ -265,7 +264,7 @@
     </section>
     <div class="feedback-box">
       <div class="feedback-question">
-        <p>Did you find this information helpful?</p>
+        <p>Did you find this information interesting?</p>
         <button class="btn" onclick="openPopup()">Yes</button>
         <button class="btn" onclick="openPopup()">No</button>
       </div>
