--- a/chandra.html
+++ b/chandra.html
@@ -16,7 +16,7 @@
         <li>
           <a href="lore.html">Lore</a>
           <ul class="dropdown">
-            <li><a href="lore.html">Kaliya</a></li>
+            <li><a href="lore.html">Haliya</a></li>
             <li><a class="active" href="chandra.html">Chandra</a></li>
             <li><a href="kuutar.html">Kuutar</a></li>
             <li><a href="lore.html">Khonshu</a></li>
