--- a/haliya.html
+++ b/haliya.html
@@ -16,9 +16,9 @@
         <li>
           <a href="lore.html">Lore</a>
           <ul class="dropdown">
-            <li><a href="haliya.html">Haliya</a></li>
+            <li><a class="active" href="haliya.html">Haliya</a></li>
             <li><a href="chandra.html">Chandra</a></li>
-            <li><a class="active" href="kuutar.html">Kuutar</a></li>
+            <li><a href="kuutar.html">Kuutar</a></li>
             <li><a href="lore.html">Khonshu</a></li>
           </ul>
         </li>
@@ -68,12 +68,12 @@
               
             </div>
           </div>
-          <div class="image-haliya">
-            <img src="//images/haliyagoddess.jpg" alt="The Masked Moon Goddess Haliya" />
-          </div>
+          <!-- <div class="image-haliya">
+            <img src="../images/haliyagoddess.jpg" alt="The Masked Moon Goddess Haliya" />
+          </div> -->
         </div>
       </section>
-      <section>
+      <section class="iconsHaliya">
         <h3>Iconography and Symbols</h3>
         <ul>
           <li>
@@ -97,6 +97,7 @@
             <p>Haliya is linked to the takay flower (water hyacinth) and the padma (lotus). The takay was a gift from the lunar gods to the people of Bikol, symbolizing their divine connection. The lotus, on the other hand, represents divine guidance and serves as a reminder to the people of Ibalong to live with kindness and compassion.</p>
           </li>
         </ul>
+        </section>
 
   </body>
 </html>
