finished kuutar, updated khonshu

--- a/kuutar.html
+++ b/kuutar.html
@@ -115,12 +115,52 @@
       </section>
       <section>
         <h3>Worship and Rituals</h3>
+        <p>While much of Finnish mythology is based on the Kalevala and other texts, there isn't a vast amount of specific, documented ritualistic practices for Kuutar. However, ased on the broader context of Finnish Paganism and the reverences for nature and celestial bodies, we can infer some possible worship practices and rituals associated with her:</p>
+        <ul>
+          <li>
+            <span class="bold-chandra">Full Moon Rituals:</span>
+            <p>
+              On full moon nights, worshipers could light candles or lamps in the open air to honor her, symbolizing the light of the moon. Offerings might include honey, milk, and silver or white-colored items that represent the moon's glow.
+            </p>
+          </li>
+          <li>
+            <span class="bold-chandra">Offerings:</span>
+            <p>
+              Offerings in Finnish paganism are often simple but meaningful. Some offerings include the silver or white objects associated with the moon's reflective nature, flowers like nightshade or other plants that are associated with the moon, or milk and honey, a sacred offering that can be poured onto the earth, which symbolizes the nurturing aspect of the moon.
+            </p>
+          </li>
+          <li>
+            <span class="bold-chandra">Rituals:</span>
+            <p>
+              The moon in many cultures is seen as a symbol of cleansing, intuition, and healing. A ritual to Kuutar might involve purification baths, which worshipers will bathe in natural water sources, symbolizing the moon's ability to purify. Another primary ritual is a simple healing prayer or invocation, particularly under the light of the moon. 
+            </p>
+          </li>
+        </ul>
+        
       </section>
       <section>
         <h3>Temples</h3>
+        <p>Currently, there is no known historical evidence of specific temples dedicated to Kuutar. Finnish mythology, particularly from the ancient pre-Christian period, did not have a highly centralized or formal system of worship with large temples as seen inn other ancient cultures. Instead, Finnish paganism was more animistic and nature-based, with worship and rituals often conducted in sacred natural sites such as groves, forests, hills, or near bodies of water. These natural places were considered the dwelling palces of spirits and deities.</p>
       </section>
-      <section>
+      <section class="legends">
         <h3>Legends</h3>
+        <p>
+          There are very few specific legends about Kuutar in the surviving sources of Finnish mythology, such as the Kalevala or other folk traditions. The moon in Finnish mythology was often seen through the lens of its connection to the natural world and cosmic rhythms, and Kuutar's role, while important, was more subtle than other deities like Vainamoinen or Ukko. However, there are a few elements and myths related to her or the moon in general that might be associated with her character or role in Finnish folklore:
+        </p>
+        <ul>
+          <li>
+            <span class="bold-chandra">Creation of the Moon:</span>
+            <p>One of the themes in Finnish mythology is the creation of celestial bodies, often involving the gods and goddess. While Kuutar isn't specifically the subject of any well-known creation myth, one could imagine a myth in which she is created or connected to the moon's formation. In this context, Kuutar might have been imagined as descending from the heavens or being birthed by other gods, perhaps even by Ukko, the good of the sky, or Ilmatar, the spirit of the air. Kuutar could be seen as the embodiment of the moon's light and energy, a celestial being who gives life and guidance through the night sky.</p>
+          </li>
+          <li>
+            <span class="bold-chandra">Kuutar and the Sun:</span>
+            <p>A potential myth could tell of Kuutar's relationship with the sun, a common theme in any mythologies. In Finnish tradition, the sun is often personified as a female deity, Paivatar, and she is the counterpart to Kuutar. A legend might involve the two goddesses, one representing the daytime and the other the nighttime. Their meeting at dawn and dusk could symbolize the merging of night and day, light and darkness, and the balance between opposites.</p>
+          </li>
+          <li>
+            <span class="bold-chandra">The Moon and the Wolf:</span>
+            <p>Wolves play an important symbolic role in Finnish lore and mythology, and their association with the moon is common in many cultures. In one possible myth, Kuutar might be linked with the wolves, either as their protector or as a guide for them during the night. Wolves, often seen howling at the moon, might have been thought to communicate with Kuutar, asking her for her wisdom or blessings.</p>
+          </li>
+        </ul>
       </section>
     </section>
   </body>
