--- a/khonshu.html
+++ b/khonshu.html
@@ -31,25 +31,44 @@
       </ul>
     </nav>
     <header class="headerKhonshu">
-        <div class="hero">
-          <div class="hero-text">
-            <h1>Khonshu</h1>
-            <h2>Egyptian God of the Moon</h2>
-          </div>
+      <div class="hero">
+        <div class="hero-text">
+          <h1>Khonshu</h1>
+          <h2>Egyptian God of the Moon</h2>
         </div>
-<section>
-        <!-- intro
-         Khonshu (also remembered as Khons, Chons, and Khensu) is known as the Egyptian God of the moon and time. He was primarily celebrated in the former city-state Thebes, where he was acknowledged for his influence on fertility; livestock and people thrived on this notion. Additionally, stories mention Khonshu having a primarily role in the creation of the universe. -->
-</section>
-<section>
-<h3>Origin Story</h3>
-         <!-- In early stories about Khonsu, he wasn't remembered as being an all giving God. On the contrary, he was remembered as being bloodthirsty and dangerous. He would work hand-in-hand with the deceased king to capture, kill, and feed on other gods in order to take their strength for himself, being known in the Coffin Texts as "Khonshu who lives on hearts". As the New Kingdom developed, however, things took a turn in which the people considered him the "Greatest God of Gods", and associated him with being actually quite compassionate. He offered great protection for the people, their livestock, and their lands. Additionally, stories describe him to have healed the pharoah Ptolemy IV, where they say he cleansed him of evil spirits. This time period is also when his name was officially defined as to travel and to cross, referencing his travels across the night sky-->
-          <!-- Sources for this section:
+      </div>
+    </header>
+
+    <section class="intro">
+      <p>
+        Khonshu (also remembered as Khons, Chons, and Khensu) is known as the
+        Egyptian God of the moon and time. He was primarily celebrated in the
+        former city-state Thebes, where he was acknowledged for his influence on
+        fertility; livestock and people thrived on this notion. Additionally,
+        stories mention Khonshu having a primarily role in the creation of the
+        universe.
+      </p>
+    </section>
+    <section class="content-chandra">
+      <section>
+        <div class="text-img-chandra">
+          <div class="text-chandra"></div>
+        </div>
+      </section>
+      <h3>Mythology and Origin Story</h3>
+      <p>In early stories about Khonsu, he wasn't remembered as being an all giving God. On the contrary, he was remembered as being bloodthirsty and dangerous. He would work hand-in-hand with the deceased king to capture, kill, and feed on other gods in order to take their strength for himself, being known in the Coffin Texts as "Khonshu who lives on hearts". As the New Kingdom developed, however, things took a turn in which the people considered him the "Greatest God of Gods", and associated him with being actually quite compassionate. He offered great protection for the people, their livestock, and their lands. Additionally, stories describe him to have healed the pharoah Ptolemy IV, where they say he cleansed him of evil spirits. This time period is also when his name was officially defined as to travel and to cross, referencing his travels across the night sky.</p>
+      <!-- Sources for this section:
            https://worldhistoryedu.com/khonsu-ancient-egyptian-god-of-the-moon-and-time/
            https://ancientegyptonline.co.uk/khonsu/ -->
-        </section>
-        <section>
-          <h3></h3>
-        </section>
+    
+    <p>
+              Chandra’s origins trace back to Vedic literature, where he is
+              praised in the Rig Veda as the essence of Soma, the sacred nectar
+              of the gods, and the nurturer of flora. Born from the mind of the
+              primordial being (as per Purusha Sukta), Chandra is intimately
+              connected to thoughts, emotions, and speech, earning the title
+              Vachaspati (Lord of Speech).
+            </p>
+
   </body>
 </html>
